# datadog-custom-rules-template

./: CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml  upload-rules.yml
rulesets/josh-ruleset-test/: no-eval.yaml  ruleset.yaml
rulesets/my-custom-rules/: no-debugger.yaml
scripts/: upload.py
tests/: test_upload.py
